--- a/app/src/main/res/layout/activity_create_team.xml
+++ b/app/src/main/res/layout/activity_create_team.xml
@@ -375,6 +375,8 @@
             android:textStyle="bold"
             android:text="Próximo Passo"
             app:rippleColor="?attr/colorControlHighlight"
+            android:backgroundTint="@color/green"
+            android:textColor="@color/white"
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
             android:visibility="visible"
