--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -102,7 +102,8 @@
                     android:textColor="@color/white"
                     android:textStyle="bold"
                     android:textSize="16sp"
-                    app:rippleColor="?attr/colorControlHighlight"/>
+                    app:rippleColor="?attr/colorControlHighlight"
+                    android:backgroundTint="@color/green"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -118,10 +119,11 @@
                     android:layout_height="60dp"
                     android:text="Cadastrar-se"
                     android:padding="15dp"
-                    android:textColor="@color/white"
                     android:textStyle="bold"
                     android:textSize="16sp"
-                    app:rippleColor="?attr/colorControlHighlight"/>
+                    app:rippleColor="?attr/colorControlHighlight"
+                    android:backgroundTint="@color/green"
+                    android:textColor="@color/white"/>
 
             </LinearLayout>
         </LinearLayout>
