--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <style name="Base.Theme.EcoSynergyApp" parent="Theme.Material3.Dark.NoActionBar">
-        <item name="colorPrimary">@color/greenDark</item>
-        <item name="colorSecondary">@color/greenDark</item>
+        <item name="colorPrimary">@color/gray</item>
+        <item name="colorSecondary">@color/gray</item>
         <item name="android:statusBarColor">@color/blackBg</item>
         <item name="android:windowLightStatusBar">false</item>
         <item name="android:colorBackground">@color/blackBg</item>
