--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <style name="Base.Theme.EcoSynergyApp" parent="Theme.Material3.Light.NoActionBar">
-        <item name="colorPrimary">@color/green</item>
-        <item name="colorSecondary">@color/green</item>
+        <item name="colorPrimary">@color/black</item>
+        <item name="colorSecondary">@color/grayDark</item>
         <item name="android:statusBarColor">@color/white</item>
         <item name="android:windowLightStatusBar">true</item>
         <item name="android:colorBackground">@color/white</item>
