--- a/app/src/main/res/layout/fragment_teams.xml
+++ b/app/src/main/res/layout/fragment_teams.xml
@@ -33,7 +33,7 @@
                     android:id="@+id/imgAlert"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-                    android:src="@drawable/ic_noteam"
+                    android:src="@drawable/ic_no_team"
                     android:layout_marginBottom="20dp"
                     app:tint="?android:attr/iconTint"/>
 
