--- a/app/src/main/res/layout/activity_add_members.xml
+++ b/app/src/main/res/layout/activity_add_members.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".teams.AddMembersBottomSheet"
+    tools:context=".teams.AddMembersActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ScrollView
@@ -23,7 +23,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_marginEnd="15dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginBottom="5dp"
                 android:background="?android:attr/selectableItemBackgroundBorderless"
                 android:gravity="top"
@@ -102,14 +102,5 @@
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
-
-
-    <View
-        android:layout_width="40dp"
-        android:layout_height="5dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/image_shape"
-        android:backgroundTint="?attr/shimmerColor"
-        android:layout_centerHorizontal="true"/>
 
 </RelativeLayout>
