--- a/app/src/main/res/layout/all_teams_redirect_layout.xml
+++ b/app/src/main/res/layout/all_teams_redirect_layout.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:id="@+id/linearClick"
+<LinearLayout android:id="@+id/linearClick"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
@@ -8,7 +7,8 @@
     android:orientation="vertical"
     android:gravity="center"
     android:layout_marginStart="10dp"
-    android:layout_marginEnd="10dp">
+    android:layout_marginEnd="10dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -24,6 +24,7 @@
         android:layout_height="30dp"
         android:src="@drawable/ic_arrow"
         android:layout_gravity="center"
+        app:tint = "?android:attr/iconTint"
         />
     </LinearLayout>
 
